--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^2.10",
-        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/migrations": "^3.6",
         "doctrine/orm": "^2.15",
         "moneyphp/money": "^4.1",
         "symfony/console": "5.4.*",
@@ -71,6 +71,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "friendsofphp/php-cs-fixer": "^3.21",
         "phpunit/phpunit": "^9.6",
         "symfony/browser-kit": "5.4.*",
